--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,7 @@
 python_version = 3.8
 disallow_untyped_defs = True
 ignore_missing_imports = True
+follow_imports = silent
 
 [flake8]
 ignore = N802,N807,W503,E203
